# atlas

./: .gitignore  Makefile  README.md  pyproject.toml  requirements.txt
src/atlas/: logging.py
src/atlas/cli/: __init__.py  base.py  webserver.py
src/atlas/data/: config.py
src/atlas/vendors/: __init__.py  base.py  registry.py
