[build-system]
requires = ["uv_build>=0.10.9,<=0.11.15"]
build-backend = "uv_build"

[project]
name = "atlas"
version = "0.1.0"
description = "Tasks orchestration and scheduling as Flows."

readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "click>=8.3.1",
    "jinja2>=3.1.6",
    "sqlalchemy[asyncio]>=2.0.48",
    "aio-pika>=9.6.2",
    "asyncpg>=0.31.0",
    "celery>=5.6.3",
    "orjson>=3.11.8",
    "kubernetes>=35.0.0",
    "jsonschema[format]>=4.26.0",
    "fastapi[standard]>=0.135.3",
    "pytz>=2024.1",
    "boto3>=1.42.73",
    "google-cloud-secret-manager>=2.26.0",
    "gevent>=26.5.0",
]
classifiers = [
    "Development Status :: 1 - Beta",
    "Intended Audience :: Developers",
    "Programming Language :: Python :: 3.12"
]

[project.scripts]
atlas = "atlas.cli.base:main"

[dependency-groups]
dev = [
    "ruff>=0.15.5",
    "ipython>=9.11.0",
    "pytest>=9.0.2",
    "pytest-asyncio>=1.3.0",
    "pytest-cov>=7.1.0",
]

[tool.ruff]
line-length = 89
target-version = "py312"

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.ruff.lint]
select = ["E", "F", "I", "W", "B"]
ignore = []

[tool.pytest.ini_options]
markers = [
    "integration: marks tests as integration tests requiring external services (deselect with '-m \"not integration\"')",
]
